<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/restaurant_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputRestaurantAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_address" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_latitude"
            android:inputType="numberDecimal|numberSigned"
            android:text="10.7769" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_longitude"
            android:inputType="numberDecimal|numberSigned"
            android:text="106.7009" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
